// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render checked 1`] = `
<div>
  <button
    class="filled"
    type="button"
  >
    label
  </button>
</div>
`;

exports[`Checkbox should render unchecked 1`] = `
<div>
  <button
    class="stroke"
    type="button"
  >
    label
  </button>
</div>
`;
